Bug 310221 icalendar items with a duration and no dtend are handled incorrectly. r=dmose